test/tests/operators/to_splunk_validation/s2s_hec_token.txt
error: `hec_token` is not supported with `mode="s2s"`
 --> tests/operators/to_splunk_validation/s2s_hec_token.tql:7:21
  |
7 |           hec_token="token"
  |                     ^^^^^^^ 
  |
